--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc\:mariadb\://localhost\:3306/rentaldb
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/rentaldb
 spring.application.name=hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.username=root
+spring.datasource.password=nqOg9QM]m]oSafhr
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.properties.hibernate.format_sql=true
